--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@google/genai": "^1.27.0",
     "generative-ai": "^0.1.4",
     "google": "^2.1.0",
+    "google-font": "^1.0.1",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-loading-indicators": "^1.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
